# neuroscript

./: .gitignore  CLAUDE.md  Cargo.toml  PACKAGE_MANAGEMENT.md  README.md  SKILL_REFLECTION_SUMMARY.md  mvp-todo.md  neuroscript-neuron-creator.skill  neuroscript.spec.md  stdlib-production-ready.md  test_examples.sh  test_match_codegen.py
.claude/: settings.json
examples/: 16-recursion.ns  18-adaptive-projection.ns  19-match-comprehensive.ns  CLAUDE.md  QUICKSTART.md  comprehensive.ns  dependency_chain_test.ns  diamond_dependency_test.ns  phase5_integration_test.ns  shape_inference_demo.ns  test-negative-params.ns  test-thread-operator.ns  test_shape_assertions.ns  test_transformer_stack.ns
examples/primitives/: attention.ns  basics.ns  embeddings.ns  normalization.ns
examples/real_world/: gpt2_small.ns  vision_transformer.ns
examples/stdlib/: attention.ns  feedforward.ns  residual.ns  transformer_block.ns  transformer_stack.ns
examples/tests/: variadic_primitives.ns
neuroscript_runtime/primitives/: __init__.py  test_primitives.py
notes/: match_partial_optimization.md  neuroscript_20251126_claude_opus_4.5.md  neuroscript_context_scope_spec.md
scripts/: generate-context.sh  generate-index.py
scripts/hooks/: check_rust.sh  check_stale_binary.sh  init.sh  inject-datetime.sh  validate_ns.sh  (+3 more)
src/: codegen.rs  interfaces.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  shape_inference.rs  stdlib.rs  stdlib_registry.rs  validator.rs
stdlib/: CLAUDE.md  TransformerBlock.ns  TransformerStack.ns
tests/: integration_tests.rs
website/: docusaurus.config.js
(+75 files in other folders)
